@@ -1,4 +1,4 @@
-# fmedia v1.23 configuration
+# fmedia v1.26 configuration
 
 
 # Maximum number of worker threads
@@ -396,7 +396,7 @@ mod_conf "alsa.in" {
 
 mod_conf "pulse.out" {
 	device_index 0
-	buffer_length 500
+	buffer_length 250
 	notify_rate 0
 }
 
