@@ -45,6 +45,7 @@
 	A(A_LIST_READMETA),
 	A(A_LIST_SAVE),
 	A(A_LIST_SELECTALL),
+	A(A_LIST_TO_NEXT),
 	A(A_LIST_REMOVE),
 	A(A_LIST_RMDEAD),
 	A(A_LIST_CLEAR),
